--- a/kancmatket_html/css/style.css
+++ b/kancmatket_html/css/style.css
@@ -30,6 +30,10 @@ a:focus {
     margin-top: 4px;
     background: #3b683d;
 }
+.recall_toggle1 {
+  display: block!important;
+  opacity: 1!important;
+}
 button {
   border: none;
 }
@@ -183,7 +187,7 @@ left: 0;
   padding-top: 20px;
   padding-bottom: 40px;
   text-transform: uppercase;
-  border-bottom: 2px dotted rgb( 152, 152, 152 );
+  border-bottom: 2px dashed rgb( 152, 152, 152 );
   margin-bottom: 20px;
 }
 .product_card {
@@ -198,7 +202,7 @@ left: 0;
 }
 .all_product {
   padding: 20px 0;
-  border-bottom: 2px dotted rgb( 152, 152, 152 );
+  border-bottom: 2px dashed rgb( 152, 152, 152 );
 }
 .all_product .col-md-9 {
   padding: 0;
@@ -214,8 +218,8 @@ left: 0;
 }
 .prerogatives_content {
   padding: 100px 0;
-  border-top: 2px dotted rgb( 152, 152, 152 );
-  border-bottom: 2px dotted rgb( 152, 152, 152 );
+  border-top: 2px dashed rgb( 152, 152, 152 );
+  border-bottom: 2px dashed rgb( 152, 152, 152 );
 }
 .prerogatives_content img {
   float: left;
@@ -611,6 +615,32 @@ padding: 11px 10px;
 .fa {
       vertical-align: middle;
 }
+.callback_btn1 {
+    font-size: 26px;
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+      padding: 2px 20px;
+      padding-top: 0;
+    background-color: #3b683d;
+    border-radius: 4px;
+    display: block;
+     -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+}
+.callback_btn1:hover {
+  background-color: #9dc44d;
+}
+.callback_btn2 {
+  text-align: right;
+  font-size: 14px;
+  color: rgb( 102, 102, 102 );
+  padding-bottom: 0;
+  padding-top: 10px;
+  position: relative;
+}
 .callback {
      position: relative;
      padding: 0;
@@ -630,10 +660,54 @@ padding: 11px 10px;
   -o-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
 }
+.callback1 {
+     float: right;
+    position: relative;
+    padding-left: 25px;
+    border-left: 1px solid rgb( 235, 235, 235 );
+}
+.callback1  {
+  
+}
+.callback2 {
+     float: right;
+    position: relative;
+    padding-left: 25px;
+    border-left: 1px solid rgb( 235, 235, 235 );
+}
+.callback2 a {
+  font-size: 14px;
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+      padding: 10px 20px;
+    background-color: #3b683d;
+    border-radius: 4px;
+    display: block;
+     -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+}
 .callback a:hover {
     background-color: #9dc44d;
 }
 .shopping_cart {
+  position: relative;
+  color: #fff;
+  font-size: 26px;
+  vertical-align: top;
+  background-color: #3b683d;
+  padding: 3px 15px;
+  padding-top: 0;
+  border-radius: 6px;
+  float: right;
+       -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+}
+.shopping_cart1 {
   position: relative;
   color: #fff;
   font-size: 26px;
@@ -708,8 +782,8 @@ padding: 11px 10px;
 #popular {
     padding: 70px;
     padding-top: 50px;
-    border-top: 2px dotted rgb( 152, 152, 152 );
-    border-bottom: 2px dotted rgb( 152, 152, 152 );
+    border-top: 2px dashed rgb( 152, 152, 152 );
+    border-bottom: 2px dashed rgb( 152, 152, 152 );
     margin-bottom: 100px;
 }
 #popular .owl-item {
@@ -1108,6 +1182,62 @@ font-size: 24px;
     top: 50px;
     border-top: 4px solid #3e6b40;
 }
+#modal_form_recall2 {
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #b0b1b3;
+    box-sizing: border-box;
+    background-color: #fbfbfb;
+    background: #fff;
+    position: absolute;
+    display: none;
+    opacity: 0;
+    z-index: 5;
+    z-index: 9999;
+   position: absolute;
+    right: 0;
+    background-color: #fff;
+    z-index: 9999;
+    border-top: 5px solid #3b683d;
+    top: 40px;
+    text-align: center;
+    border-top: 4px solid #3e6b40;
+}
+#bucket {
+    border-radius: 3px;
+    background-color: #ffffff;
+    box-shadow: 2px 4px 10.66px 2.34px rgba(47, 46, 47, 0.49);
+    border-top-color: #3b683d;
+    border-top-style: solid;
+    border-top-width: 4px;
+    position: absolute;
+    top: 50px;
+    right: 0;
+    width: 400px;
+     display: none;
+    opacity: 0;
+    z-index: 5;
+    padding: 20px 10px;
+    z-index: 9999;
+}
+#modal_form_recall1 {
+    border-radius: 3px;
+    background-color: #ffffff;
+    box-shadow: 2px 4px 10.66px 2.34px rgba(47, 46, 47, 0.49);
+    border-top-color: #3b683d;
+    border-top-style: solid;
+    border-top-width: 4px;
+    position: absolute;
+    top: 50px;
+    right: 0;
+    width: 400px;
+     display: none;
+    opacity: 0;
+    z-index: 5;
+    padding: 20px 10px;
+    z-index: 9999;
+}
 #modal_form_recall:before {
   content: "";
     display: block;
@@ -1154,6 +1284,10 @@ border-color: transparent transparent #3e6b40 transparent;
   display: block!important;
   opacity: 1!important;
 }
+.recall_toggle2 {
+  display: block!important;
+  opacity: 1!important;
+}
 .popular_item {
   text-align: center;
 }
@@ -1197,7 +1331,7 @@ border-color: transparent transparent #3e6b40 transparent;
   list-style: none;
 }
 .container_goods {
-  border-bottom: 2px dotted rgb( 152, 152, 152 );
+  border-bottom: 2px dashed rgb( 152, 152, 152 );
 }
 .pagination_container  {
   padding-bottom: 50px;
@@ -1374,8 +1508,8 @@ padding-right: 20px;
   padding-top:30px;
   padding-bottom:30px;
   margin-bottom: 100px;
-   border-top: 2px dotted rgb( 152, 152, 152 );
-  border-bottom: 2px dotted rgb( 152, 152, 152 );
+   border-top: 2px dashed rgb( 152, 152, 152 );
+  border-bottom: 2px dashed rgb( 152, 152, 152 );
 }
 .about img {
   width: 100%;
@@ -1570,7 +1704,7 @@ overflow: hidden;
   font-size: 14px;
 }
 .marks_card {
-  border-bottom: 2px dotted rgb( 152, 152, 152 );
+  border-bottom: 2px dashed rgb( 152, 152, 152 );
 }
 .card_product_parametrs h4 {
    font-size: 18px;
@@ -1663,20 +1797,34 @@ position: relative;
     filter: alpha(opacity=0);
     text-align: center;
 }
-.hover:hover {
-    opacity: 1;
-}
 .hover_item {
   text-align: center;
   font-size: 18px;
   color: rgb( 255, 255, 255 );
   line-height: 1.333;
   position: absolute;
-    left: 50%;
+    left: 0;
     top: 50%;
     transform: translate(-50%, -50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    transform: translateY(-50%);
+    -webkit-transition: all ease .3s;
+    transition: all ease .3s;
+    transform-origin: 50% 100% 0px;
+    transform-style: flat;
+    transform: matrix3d(0.8, 0, 0, 0, 0, 0, 0.8, -0.000666667, 0, -1, 0, 0, 0, 0, 0.001, 0.999999);
 }
 
+.hover:hover {
+    opacity: 1;
+}
+.hover:hover .hover_item {
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    transform: translateY(-50%);
+    margin-top: 0px;
+}
 .button_bucket {
   background-color:  #1d8c3d;
   width: 120px;
@@ -1698,18 +1846,6 @@ position: relative;
   font-size: 12px;
 }
 
-.bucket {
-    border-radius: 3px;
-    background-color: #ffffff;
-    box-shadow: 2px 4px 10.66px 2.34px rgba(47, 46, 47, 0.49);
-    border-top-color: #3b683d;
-    border-top-style: solid;
-    border-top-width: 4px;
-    position: absolute;
-    top: 50px;
-    right: 0;
-    width: 400px;
-}
 .bucket:before {
     content: "";
     display: block;
@@ -1832,7 +1968,7 @@ position: relative;
   margin: 10px;
   overflow: hidden;
   padding-bottom: 10px;
-   border-bottom: 1px dotted rgb( 208, 208, 208 );
+   border-bottom: 1px dashed rgb( 208, 208, 208 );
 }
 .order_item_close {
   position: absolute;
@@ -2135,6 +2271,210 @@ font-size: 20px;
 .product_buy_btn.product_buy_btn_card {
   width: 30%;
 }
+.scrollTop {
+  position:fixed;
+   right:2%;
+  bottom:10px;
+   background-color:#9dc44d;
+  padding:2px 10px;
+  padding-top: 0;
+  opacity:0;
+  transition: all 0.4s ease-in-out 0s;
+}
+.scrollTop:hover {
+  background-color: #3b683d;
+}
+.scrollTop a {
+  font-size:12px;
+  color:#fff;
+  line-height: 1;
+}
+.filter_item {
+  padding-bottom: 20px;
+}
+.filter_item h4 {
+  font-size: 14px;
+  font-family: "Verdana";
+  color: rgb( 102, 102, 102 );
+  text-align: center;
+  background-color: #ebebeb;
+  padding: 7px 0;
+}
+.all_product .col-md-3 {
+  padding-right: 20px;
+}
+.filter_item .checkbox {
+  float: left;
+  margin-top: 0;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+.checkbox+label {
+  display: block;
+    padding-left: 25px;
+    position: relative;
+    cursor: pointer;
+    margin-bottom: 15px;
+    color: #acb5c2;
+    font-size: 16px;
+    margin-bottom: 0;
+  font-size: 16px;
+  font-family: "Verdana";
+  color: rgb( 102, 102, 102 );
+  line-height: 1.8;
+  text-align: left;
+  text-transform: initial;
+  font-weight: normal;
+}
+.checkbox+label:before {
+  content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: 5px;
+    height: 20px;
+    width: 20px;
+    border-radius: 5px;
+    border: 1px solid #3b683d;
+    background: url(../img/checked.png);
+    background-repeat: no-repeat;
+    background-position: center -1000%;
+    padding: 2px;
+    transition: .2s;
+}
+input[type=checkbox]:checked + label {
+  color: #a7ca5e;
+} 
+input[type=checkbox]:checked + label:before {
+  background-position: center;
+  color: #3b683d;
+} 
+
+
+.filter_reset  {
+  float: left;
+}
+.filter_show {
+  float: right;
+}
+.filter_reset a,.filter_show a {
+  color: #fff;
+  text-decoration: none;
+  background: #3b683d;
+  padding: 7px 20px;
+  border-radius: 5px;
+}
+.filter_reset a:hover,.filter_show a:hover {
+background-color: #a7ca5e;
+}
+
+.tabs_list {
+  width: 80%;
+    float: right;
+}
+.tabs_item {
+  display: none;
+  margin-bottom: 20px;
+}
+.tabs_item.active {
+  display: block;
+}
+.tab_info .tabs {
+  float: left;
+  overflow: hidden;
+}
+.tabs_controls_item {
+  padding: 2px 20px;
+   border-width: 1px;
+  border-color: rgb( 59, 104, 61 );
+  border-style: solid;
+  border-radius: 5px;
+   font-size: 14px;
+  font-family: "Verdana";
+  color: rgb( 59, 104, 61 );
+  text-align: center;
+  margin-bottom: 15px;
+  cursor: pointer;
+}
+.tabs_controls_item.active {
+  color: #fff;
+  border-color: #9dc44d;
+  background: #9dc44d;
+}
+.tabs_item label {
+  font-weight: normal;
+}
+.tabs_item input {
+    padding: 10px 20px;
+    color: #777;
+    margin: 0 -4px 0 0;
+    border: 1px solid #3b683d;
+    border-radius: 0;
+    width: 100%;
+    margin: 10px 0;
+}
+.tabs_content {
+  overflow: hidden;
+}
+#day {
+  border: 1px solid #ccc;
+    color: #ccc;
+    padding: 5px 10px;
+    margin-right: 20px;
+}
+#month {
+  border: 1px solid #ccc;
+    color: #ccc;
+    padding: 5px 10px;
+    margin-right: 20px;
+}
+#yearpicker  {
+  border: 1px solid #ccc;
+    color: #ccc;
+    padding: 5px 10px;
+    margin-right: 20px;
+}
+#day option {
+  color: black;
+} 
+#month option {
+  color: black;
+}
+#yearpicker option {
+  color: black;
+}
+.save a{
+  color: rgb( 255, 255, 255 );
+  display: block;
+    border-color: #9dc44d;
+    background: #9dc44d;
+    padding: 5px 0;
+    width: 200px;
+     text-align: center;
+     border-radius: 5px;
+     text-transform: uppercase;
+      font-size: 18px;
+      float: left;
+      margin-right: 20px;
+}
+.edit_history a{
+  border-radius: 5px;
+  text-transform: uppercase;
+  text-align: center;
+  display: block;
+   width: 200px;
+  padding: 5px 0;
+ color: rgb( 255, 255, 255 );
+    border-color: #9dc44d;
+    background: #9dc44d;
+    font-size: 18px;
+    float: left;
+}
+.tabs_item.active form  {
+  opacity: 0.3;
+}
 @media (max-width: 960px) {
   .order_details_main_header h4 {
     width: 60%;
@@ -2243,7 +2583,7 @@ font-size: 20px;
 
 }
 .shipping h3 {
-  border-bottom: 2px dotted rgb( 152, 152, 152 );
+  border-bottom: 2px dashed rgb( 152, 152, 152 );
   padding-bottom: 50px;
     margin-bottom: 50px;
 
@@ -2255,13 +2595,13 @@ font-size: 20px;
   padding: 0 30px;
 }
 .payment h3 {
-  border-bottom: 2px dotted rgb( 152, 152, 152 );
+  border-bottom: 2px dashed rgb( 152, 152, 152 );
   padding-bottom: 50px;
     margin-bottom: 50px;
   }
 .payment {
   padding-bottom: 30px;
-   border-bottom: 2px dotted rgb( 152, 152, 152 );
+   border-bottom: 2px dashed rgb( 152, 152, 152 );
 }
 .shipping {
   margin-bottom: 50px;
@@ -2312,11 +2652,11 @@ font-size: 20px;
   padding: 0;
 }
   .dropdown-menu_third {
-        position: relative;
+        position: static;
     z-index: 1000;
     display: none;
-    float: left;
-    min-width: 285px;
+    float: none;
+    width: 100%;
     padding: 5px 0;
     margin: 5px 0 0;
     font-size: 14px;
