--- a/kancmatket_html/css/bootstrap.css
+++ b/kancmatket_html/css/bootstrap.css
@@ -1398,12 +1398,13 @@ th {
     padding: 8px;
     line-height: 1.428571429;
     vertical-align: top;
-    border-top: 1px solid #ddd
+    border-top: 1px solid #ddd;
+    font-weight: normal;
 }
 
 .table thead>tr>th {
     vertical-align: bottom;
-    border-bottom: 2px solid #ddd
+    border-bottom: 1px solid #ddd
 }
 
 .table caption+thead tr:first-child th,
