--- a/kancmatket_html/css/style.css
+++ b/kancmatket_html/css/style.css
@@ -2116,7 +2116,23 @@ font-size: 20px;
   margin-left: 0;
 }
 .order_details_delivery_tab {
-  height: auto;
+    background-color: #fff;
+    color: #a7ca5e;
+    border: 1px solid #a7ca5e;
+    height: auto;
+    padding: 2px 10px;
+    width: 150px;
+    display: block;
+    text-align: center;
+    border: 1px solid #a7ca5e;
+    border-radius: 4px;
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+}
+.order_details_delivery_tabs .active a{
+    height: auto;
     padding: 2px 10px;
     width: 150px;
     color: #fff;
@@ -2129,11 +2145,6 @@ font-size: 20px;
     -moz-transition: .5s ease-in-out;
     -o-transition: .5s ease-in-out;
     transition: .5s ease-in-out;
-}
-.order_details_delivery_tab:hover {
-    background-color: #fff;
-    color: #a7ca5e;
-    border: 1px solid #a7ca5e;
 }
 .order_details_delivery >span {
   float: left;
