--- a/kancmatket_html/css/style.css
+++ b/kancmatket_html/css/style.css
@@ -44,7 +44,7 @@ body {
   position: relative;
 }
 .main_carousel .owl-slide {
-  height: 560px
+  height: 760px
 }
 .main_carousel .owl-slide {
   background-repeat: no-repeat;
@@ -187,7 +187,6 @@ left: 0;
   padding-top: 20px;
   padding-bottom: 40px;
   text-transform: uppercase;
-  border-bottom: 2px dashed rgb( 152, 152, 152 );
   margin-bottom: 20px;
 }
 .product_card {
@@ -202,7 +201,7 @@ left: 0;
 }
 .all_product {
   padding: 20px 0;
-  border-bottom: 2px dashed rgb( 152, 152, 152 );
+  /*border-bottom: 2px dashed rgb( 152, 152, 152 );*/
 }
 .all_product .col-md-9 {
   padding: 0;
@@ -218,8 +217,8 @@ left: 0;
 }
 .prerogatives_content {
   padding: 100px 0;
-  border-top: 2px dashed rgb( 152, 152, 152 );
-  border-bottom: 2px dashed rgb( 152, 152, 152 );
+  /*border-top: 2px dashed rgb( 152, 152, 152 );
+  border-bottom: 2px dashed rgb( 152, 152, 152 );*/
 }
 .prerogatives_content img {
   float: left;
@@ -666,9 +665,6 @@ padding: 11px 10px;
     padding-left: 25px;
     border-left: 1px solid rgb( 235, 235, 235 );
 }
-.callback1  {
-  
-}
 .callback2 {
      float: right;
     position: relative;
@@ -789,8 +785,8 @@ padding: 11px 10px;
 #popular {
     padding: 70px;
     padding-top: 50px;
-    border-top: 2px dashed rgb( 152, 152, 152 );
-    border-bottom: 2px dashed rgb( 152, 152, 152 );
+   /* border-top: 2px dashed rgb( 152, 152, 152 );
+    border-bottom: 2px dashed rgb( 152, 152, 152 );*/
     margin-bottom: 100px;
 }
 #popular .owl-item {
@@ -1347,7 +1343,7 @@ border-color: transparent transparent #3e6b40 transparent;
   list-style: none;
 }
 .container_goods {
-  border-bottom: 2px dashed rgb( 152, 152, 152 );
+  /*border-bottom: 2px dashed rgb( 152, 152, 152 );*/
 }
 .pagination_container  {
   padding-bottom: 50px;
@@ -2522,11 +2518,6 @@ background-color: #a7ca5e;
   .product_buy_btn.product_buy_btn_card {
   width: 100%;
 }
- .nav-tabs>li.active>a,
-.nav-tabs>li.active>a:hover,
-.nav-tabs>li.active>a:focus {
-    font-size: 90%;
-  }
   .nav-tabs>li>a {
     border-top-right-radius: 15px;
     padding: 10px;
@@ -2649,6 +2640,51 @@ background-color: #a7ca5e;
 .register .product_buy_btn {
   width: 100%;
 }
+#modal_form {
+  width: 400px; 
+  height: 250px; /* Рaзмеры дoлжны быть фиксирoвaны */
+  border-radius: 5px;
+  background: #fff;
+  position: fixed; /* чтoбы oкнo былo в видимoй зoне в любoм месте */
+  top: 45%; /* oтступaем сверху 45%, oстaльные 5% пoдвинет скрипт */
+  left: 50%; /* пoлoвинa экрaнa слевa */
+  margin-top: -200px;
+  margin-left: -200px; /* тут вся мaгия центрoвки css, oтступaем влевo и вверх минус пoлoвину ширины и высoты сooтветственнo =) */
+  display: none; /* в oбычнoм сoстoянии oкнa не дoлжнo быть */
+  opacity: 0; /* пoлнoстью прoзрaчнo для aнимирoвaния */
+  z-index: 5; /* oкнo дoлжнo быть нaибoлее бoльшем слoе */
+  padding: 20px 10px;
+  text-align: center;
+  color: rgb( 102, 102, 102 );
+}
+/* Кнoпкa зaкрыть для тех ктo в тaнке) */
+#modal_form #modal_close {
+  width: 21px;
+  height: 21px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  display: block;
+}
+/* Пoдлoжкa */
+#overlay {
+  z-index:3; /* пoдлoжкa дoлжнa быть выше слoев элементoв сaйтa, нo ниже слoя мoдaльнoгo oкнa */
+  position:fixed; /* всегдa перекрывaет весь сaйт */
+  background-color:#000; /* чернaя */
+  opacity:0.8; /* нo немнoгo прoзрaчнa */
+  -moz-opacity:0.8; /* фикс прозрачности для старых браузеров */
+  filter:alpha(opacity=80);
+  width:100%; 
+  height:100%; /* рaзмерoм вo весь экрaн */
+  top:0; /* сверху и слевa 0, oбязaтельные свoйствa! */
+  left:0;
+  cursor:pointer;
+  display:none; /* в oбычнoм сoстoянии её нет) */
+}
+.modal_form h3 {
+  margin: 10px 0;
+}
 @media (max-width: 960px) { 
   .subscribe input[type="text"]{ 
  width: 100%;
@@ -2758,9 +2794,6 @@ background-color: #a7ca5e;
   position: relative;
 }
 @media (min-width: 1500px) {
-  /*.main_carousel .owl-slide {
-    height: 1200px;
-  }*/
   .banner_carousel .owl-slide {
   height: 1200px;
 }
@@ -2828,6 +2861,35 @@ background-color: #a7ca5e;
 }
 }
 @media (max-width: 400px) {
+  .thumbs a {
+    width: 32%;
+  }
+  .products_details .nav-tabs>li>a {
+    font-size: 60%;
+  }
+  #modal_form_recall1 {
+    width: 250px;
+  }
+  .reviews {
+    padding: 0;
+  }
+  .review_pic {
+     float: none;
+     overflow: visible; 
+    width: 100%;
+    text-align: center;
+}
+.review_text {
+  width: 100%;
+  overflow: visible;
+}
+.prerogatives_content {
+  padding: 0;
+}
+  .callback1 {
+    padding-left: 15px;
+}
+
   .cart {
     padding-left: 5px;
   }
