--- a/kancmatket_html/css/style.css
+++ b/kancmatket_html/css/style.css
@@ -15,9 +15,9 @@
   color: #fff;
   text-decoration: none;
 }
-/** {
-  border: 1px solid black;
-}*/
+* {
+  outline: none;
+}
 a:focus {
   outline: none;
 }
@@ -2861,6 +2861,18 @@ background-color: #a7ca5e;
 }
 }
 @media (max-width: 400px) {
+  .save {
+     width: 200px;
+    margin: 0 auto;
+  }
+  .save a {
+    margin-bottom: 20px;
+  }
+  .edit_history {
+    width: 200px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
   .thumbs a {
     width: 32%;
   }
