--- a/kancmatket_html/css/style.css
+++ b/kancmatket_html/css/style.css
@@ -2625,7 +2625,7 @@ background-color: #a7ca5e;
     padding: 30px 0;
 }
   #popular {
-    padding: 70px 0;
+    padding: 0;
   }
   .sub_nav {
     background-image: none;
