--- a/kancmatket_html/css/style.css
+++ b/kancmatket_html/css/style.css
@@ -2663,6 +2663,7 @@ background-color: #a7ca5e;
 }
 .nav>li>a {
   display: inline;
+  padding-left: 0;
 }
 .sub_nav_container .dropdown-menu li:hover {
   background-color: #9dc44d;
@@ -2785,6 +2786,23 @@ background-color: #a7ca5e;
   margin: 10px 0;
 }
 @media (max-width: 960px) { 
+  #modal_form {
+  width: 240px; 
+  height: 250px; /* Рaзмеры дoлжны быть фиксирoвaны */
+  border-radius: 5px;
+  background: #fff;
+  position: fixed; /* чтoбы oкнo былo в видимoй зoне в любoм месте */
+  top: 45%; /* oтступaем сверху 45%, oстaльные 5% пoдвинет скрипт */
+  left: 50%; /* пoлoвинa экрaнa слевa */
+  margin-top: -200px;
+  margin-left: -120px; /* тут вся мaгия центрoвки css, oтступaем влевo и вверх минус пoлoвину ширины и высoты сooтветственнo =) */
+  display: none; /* в oбычнoм сoстoянии oкнa не дoлжнo быть */
+  opacity: 0; /* пoлнoстью прoзрaчнo для aнимирoвaния */
+  z-index: 5; /* oкнo дoлжнo быть нaибoлее бoльшем слoе */
+  padding: 20px 10px;
+  text-align: center;
+  color: rgb( 102, 102, 102 );
+}
   .subscribe input[type="text"]{ 
  width: 100%;
  margin: 10px 0;
@@ -2806,7 +2824,7 @@ background-color: #a7ca5e;
     left: 0;
   }
   .banner_carousel .owl-slide {
-    height: 438px;
+    height: 338px;
   }
   .banner_carousel div.owl--text {
     width: 90%;
